Update MetricsUtilTest.java